@@ -2,6 +2,7 @@
 
 use strict;
 use warnings;
+use v5.10;
 use Module::Build;
 
 my $builder = Module::Build->new(
