@@ -18,3 +18,6 @@ t/special.t
 t/yaml.t
 t/namespace.t
 dist.ini
+lib/Test/Clustericious/Config.pm
+t/test_clustericious_config.t
+t/use.t
