@@ -15,7 +15,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.36
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.4002, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -28,16 +28,19 @@ no_index:
 provides:
   Clustericious::Config:
     file: lib/Clustericious/Config.pm
-    version: 0.16
+    version: 0.17
   Clustericious::Config::Password:
     file: lib/Clustericious/Config/Password.pm
-    version: 0.16
+    version: 0.17
   Clustericious::Config::Plugin:
     file: lib/Clustericious/Config/Plugin.pm
-    version: 0.16
+    version: 0.17
+  Test::Clustericious::Config:
+    file: lib/Test/Clustericious/Config.pm
+    version: 0.17
 resources:
   bugtracker: https://github.com/plicease/Clustericious-Config/issues
   homepage: http://perl.wdlabs.com/Clustericious-Config
   license: http://dev.perl.org/licenses/
   repository: git://github.com/plicease/Clustericious-Config.git
-version: 0.16
+version: 0.17
