@@ -24,7 +24,7 @@ use strict;
 use warnings;
 use base qw( Exporter );
 
-our $VERSION = '0.16';
+our $VERSION = '0.17';
 our @mergeStack;
 our @EXPORT = qw( extends_config get_password conf );
 
