@@ -1,0 +1,8 @@
+use strict;
+use warnings;
+use Test::More tests => 4;
+
+use_ok 'Clustericious::Config';
+use_ok 'Clustericious::Config::Password';
+use_ok 'Clustericious::Config::Plugin';
+use_ok 'Test::Clustericious::Config';
